5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1671_1101.log
== TEST (2019-04-18 14:56:27) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != R) or (T != I) or (T != C):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (T != R) or (T != I) or (T != C):
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:57:02) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") or (T != "I") or (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:57:34) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 14:57:59) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- EXECUTION TIME:
0.201402
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:59:49) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 15:00:27) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- EXECUTION TIME:
0.172434
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 15:00:33) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 15:02:57) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 15:03:41) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 15:08:44) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:59:57) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:22:13) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:23:49) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:24:49) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif:
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- ERROR:
File "XXXX", line 23
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:24:57) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
else:
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:24:58) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
else:
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- EXECUTION TIME:
0.203963
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:30:47) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", Z)
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", Z)
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", Z)
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", Z)
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:31:55) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:32:05) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- EXECUTION TIME:
0.218731
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:22) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:33:32) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C"):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- EXECUTION TIME:
0.140815
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:37:55) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C") or (E < 0):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:37:59) 
-- CODE:
# Entradas
E = float(input("Consumo de energia: "))
T = input("Tipo de instalacao: (R/I/C)? ")
print("Entradas: ", E, " kWh e tipo ", T)
# Condicoes
if (T != "R") and (T != "I") and (T != "C") or (E < 0):
	print("Dados invalidos")
elif (T == "R") and (E <= 500) :
	Z = E * 0.44
	print("Valor total: R$ ", round(Z, 2))
elif (T == "R") and (E > 500):
	Z = E * 0.65
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E <= 1000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "C") and (E > 1000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E <= 5000):
	Z = E * 0.55
	print("Valor total: R$ ", round(Z, 2))
elif (T == "I") and (E > 5000):
	Z = E * 0.60
	print("Valor total: R$ ", round(Z, 2))
	



-- EXECUTION TIME:
0.204645
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
